<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.sustainability.LoginActivity">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/usernameText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:layout_constraintLeft_toLeftOf="@+id/usernameTextView" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintLeft_toLeftOf="@+id/usernameText" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:layout_constraintLeft_toLeftOf="@+id/passwordTextView" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_marginTop="40dp"
        android:onClick="login"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintLeft_toLeftOf="@+id/passwordText" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        app:layout_constraintRight_toRightOf="@+id/passwordText"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
</android.support.constraint.ConstraintLayout>
