<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.sustainability.ProfileActivity">

    <EditText
        android:id="@+id/editEmailText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailTextView" />

    <TextView
        android:text="@string/e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileEmailTextView"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileAddressTextView"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editEmailText" />

    <EditText
        android:hint="@string/address"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editAddressText"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressTextView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profilePhoneTextView"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editAddressText"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneTextView" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileSaveButton"
        android:onClick="saveProfile"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/profileRoleSpinner" />

    <Button
        android:text="@string/back"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:id="@+id/profileBackButton"
        android:onClick="backToMain"
        android:layout_marginStart="80dp"
        app:layout_constraintLeft_toRightOf="@+id/profileSaveButton"
        app:layout_constraintBottom_toBottomOf="@+id/profileSaveButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:layout_width="328dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="43dp"
        android:entries="@array/user_roles"
        android:id="@+id/profileRoleSpinner"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />
</android.support.constraint.ConstraintLayout>
